--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "projeto criado em sala para exercitar a criacao de api do zero",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "api"
