--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Aline Sena",
   "license": "ISC",
   "dependencies": {
+    "apidoc": "^0.18.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.10",
